comparing imputing method

--- a/repdata/peer1/PA1_template.Rmd
+++ b/repdata/peer1/PA1_template.Rmd
@@ -200,3 +200,8 @@ legend('topright',
 
 
 ### Imputing missing value using average steps from each 5-minute interval vs.
+average daily total steps
+```{r}
+mean(subject$steps, na.rm = T)
+mean(total.steps.day) / 288
+```
