--- a/repdata/peer2/HelloWorld.Rmd
+++ b/repdata/peer2/HelloWorld.Rmd
@@ -23,18 +23,110 @@ dtl <- as.data.table(read.csv(filename, na.strings = '', colClasses = 'character
 dim(dtl)
 
 head(dtl)
-
-sort(dtl[, unique(EVTYPE)])
 ```
+
+###Data cleansing
+```{r colnames}
+library(data.table)
+
+setnames(dtl, c(1, 35), c('STATE_FIPS', 'LONGITUDE_E'))
+
+dtl[, BGN_DATE:=as.IDate(BGN_DATE, '%m/%d/%Y')]
+
+head(dtl)
+```
+
 
 
 ```{r event type cleansing}
 library(data.table)
 
 sort(dtl[, unique(EVTYPE)])
+
+
+dtl[, EVTYPE:=toupper(EVTYPE)]
+
+#HUNDERSTORM WIND
+dtl[grepl('SUMMARY', EVTYPE) & grepl('[Tt]hunderstorm.*[Ww]ind', REMARKS), EVTYPE:='THUNDERSTORM WIND']
+
+#HAIL
+dtl[grepl('SUMMARY', EVTYPE) & grepl('[Hh]ail', REMARKS), EVTYPE:='HAIL']
+
+#FLASH FLOOD
+dtl[grepl('SUMMARY', EVTYPE) & grepl('[Ff]lash flood', REMARKS), EVTYPE:='FLASH FLOOD']
+
+#LIGHTNING
+dtl[grepl('SUMMARY', EVTYPE) & grepl('[Ll]ightning', REMARKS), EVTYPE:='LIGHTNING']
+
+#BLIZZARD
+dtl[grepl('SUMMARY', EVTYPE) & grepl('[Bb]lizzard', REMARKS), EVTYPE:='BLIZZARD']
+
+#VOLCANIC ASH
+dtl[grepl('VO', EVTYPE), EVTYPE:='VOLCANIC ASH']
+
+sort(dtl[, unique(EVTYPE)])
 ```
 
 
+too many events; how about categories of events?
+
+In some cases, such as with Hurricane Katrina, it may be nearly impossible to determine what
+event (i.e., Storm Surge/Tide, Hurricane, Flash Flood, or High Surf) resulted in a directly-related
+death. For these situations, in order to simplify the Storm Data preparation process, it is
+appropriate to assign the death to the Hurricane (Typhoon) event. However, state this fact in the
+event narrative.
+
+
+2.1.1 Storm Data Event Table
+Event Name Designator Event Name Designator
+Astronomical Low Tide Z
+Avalanche Z
+Blizzard Z
+Coastal Flood Z
+Cold/Wind Chill Z
+Debris Flow C
+Dense Fog Z
+Dense Smoke Z
+Drought Z
+Dust Devil C
+Dust Storm Z
+Excessive Heat Z
+Extreme Cold/Wind Chill Z
+Flash Flood C
+Flood C
+Frost/Freeze Z
+Funnel Cloud C
+Freezing Fog Z
+Hail C
+Heat Z
+Heavy Rain C
+Heavy Snow Z
+High Surf Z
+High Wind Z
+Hurricane (Typhoon) Z
+Ice Storm Z
+Lake-Effect Snow Z
+Lakeshore Flood Z
+Lightning C
+Marine Hail M
+Marine High Wind M
+Marine Strong Wind M
+Marine Thunderstorm Wind M
+Rip Current Z
+Seiche Z
+Sleet Z
+Storm Surge/Tide Z
+Strong Wind Z
+Thunderstorm Wind C
+Tornado C
+Tropical Depression Z
+Tropical Storm Z
+Tsunami Z
+Volcanic Ash Z
+Waterspout M
+Wildfire Z
+Winter Storm Z
+Winter Weather Z
 
 ### Assignment Instructions 
 
@@ -69,7 +161,7 @@ You may have other sections in your analysis, but Data Processing and Results ar
 
 The analysis document must have at least one figure containing a plot.
 
-Your analyis must have no more than three figures. Figures may have multiple plots in them (i.e. panel plots), but there cannot be more than three figures total.
+Your analysis must have no more than three figures. Figures may have multiple plots in them (i.e. panel plots), but there cannot be more than three figures total.
 
 You must show all your code for the work in your analysis document. This may make the document a bit verbose, but that is okay. In general, you should ensure that echo = TRUE for every code chunk (this is the default setting in knitr).
 
